# hackaton

./: .env.example  .gitignore  LICENSE  README.md  requirements.txt
db/: chroma.sqlite3
techpartner/: .gitignore  README.md  pyproject.toml
techpartner/knowledge/: user_preference.txt
techpartner/src/db/: chroma.sqlite3
techpartner/src/techpartner/: crew.py  main.py
techpartner/src/techpartner/config/: agents.yaml  tasks.yaml
